Support for RF 8.5s gimbal modifying
Parts apply to the new stock tech-tree
New curve 'waisted' for smooth cone shapes
Stock aero compatible heat shield
Texture format changed to dds
Offset parts now stay were they were after loading a craft in editor
Procedural ore tank
Maximum temperatures of nearly every procedural part changed
Texture 'ablative' endcap changed

=== 1.0.2 ===
Shapes now use as much polygons as before 1.0.1

=== 1.0.1 ===
Fixed a bug that appeared when the stack below a procedural SRB contained the root part.
Added procedural liquid fuel tank cone
Tweaked nose cone cost and mass
Cost display now shows dry and actual cost
Shapes now use much less polygons

=== 1.0.0 ===
Use the engine wrapper module so that hot rockets can be used.
Official support for Kethane / Extraplanetary Lanchpads / TAC
Allow either end of cone shapes to be the small end
Support for rebuilding the drag model in Ferram Aerospace Research
Battery Part
Shape limiting on tech levels.
Implement procedural cost support (needs balancing)
Switch to PNG until Squad fixes the TGA loader bug.
Various bugfixes and tweaks.

=== 0.9.0 ===
Procedural heat-shields for Deadly Re-entry
Procedural tanks for resources in other mods: Kethane, TAC, Extraplanetary Launchpads
Ability to display numbers in tweaker interface using SI prefixes and significant figures
Xenon Tank
Hiding of parts depending on what addins are installed
Resource improvements - can set a tank to be empty in the VAB ( waste, Kethane ) or to have a fixed amount of resource

=== 0.8.0 ===
Implementation of new messaging system.
Better support for Real Fuels.
Procedural Nose Cones

=== 0.7.0 ===
Support for bezier cones - cone shapes with smoothed sides
Show correct images in VAB
Tweakable Stack Decoupler
Bells of SRBs now scale with sqrt(thrust), and the max thrust is limited by the size of the bottom of the part

=== 0.6.0 ===
Added support for Pill sided tanks