@@ -39,6 +39,13 @@ namespace ProceduralParts
             }
         }
 
+        [KSPField(isPersistant = true)]
+        private  Vector3 tempColliderCenter;
+
+        [KSPField(isPersistant = true)]
+        private Vector3 tempColliderSize;
+
+        private BoxCollider tempCollider;
         public override void OnLoad(ConfigNode node)
         {
             // Load stuff from config files
@@ -52,6 +59,20 @@ namespace ProceduralParts
                 Debug.LogError("OnLoad exception: " + ex);
                 throw;
             }
+
+            if (HighLogic.LoadedSceneIsFlight)
+            {     
+                // Create a temporary collider for KSP so that it can set the craft on the ground properly
+                tempCollider = gameObject.AddComponent<BoxCollider>();
+                tempCollider.center = tempColliderCenter;
+                
+                tempCollider.size = tempColliderSize;
+                tempCollider.enabled = true;
+                //Debug.Log("created temp collider with size: " + tempCollider.size);
+                //Debug.Log("bounds: " + tempCollider.bounds);
+            }
+            
+
         }
 
         public override void OnSave(ConfigNode node)
@@ -75,6 +96,14 @@ namespace ProceduralParts
 
         public override void OnStart(StartState state)
         {
+            if(tempCollider!=null)
+            {
+                // delete the temporary collider, if there is one
+                Component.Destroy(tempCollider);
+                tempCollider = null;
+                Debug.Log("destroyed temporary collider");
+            }
+
             // Update internal state
             try
             {
@@ -1377,7 +1406,7 @@ namespace ProceduralParts
         [PartMessageListener(typeof(PartModelChanged), scenes: ~GameSceneFilter.Flight)]
         public void PartModelChanged()
         {
-            Debug.Log("Shape Changed");
+            //Debug.Log("Shape Changed");
             foreach (FreePartAttachment ca in childAttach)
             {
                 Vector3 newPosition = shape.FromCylindricCoordinates(ca.Coordinates);
@@ -1394,6 +1423,22 @@ namespace ProceduralParts
                 //Debug.Log("y: " + ca.y);
                 //Debug.Log("r: " + ca.r);
             }
+
+            
+            if(partCollider!=null)
+            {
+                tempColliderCenter = Vector3.zero;
+
+                Vector3 min = transform.InverseTransformPoint(partCollider.bounds.min);
+                Vector3 max = transform.InverseTransformPoint(partCollider.bounds.max);
+
+                tempColliderSize.x = max.x - min.x;
+                tempColliderSize.y = max.y - min.y;
+                tempColliderSize.z = max.z - min.z;
+
+                //Debug.Log(tempColliderSize);
+            }
+
 
         }
 
